<resources>
    <string name="app_name">CellMate</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="img_desc">Background Image</string>
    <string name="capture">Capture</string>
    <string name="calibrate_again">Calibrate Again</string>
    <string name="calibration">Calibration</string>
    <string name="control">Control</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="progressBar">ProgressBar</string>
    <string name="zeroProgress">N/A</string>
    <string name="request_permission">This sample needs camera permission.</string>

    <string name="grpc_server_addr_key">grpc_server_addr</string>
    <string name="grpc_server_addr_title">GRPC Server Address</string>
    <string name="grpc_server_addr_val">castle.cs.berkeley.edu</string>
    <string name="grpc_server_port_key">grpc_server_port</string>
    <string name="grpc_server_port_title">GRPC Server Port</string>
    <string name="grpc_server_port_val">50011</string>

    <string name="calibration_server_addr_key">calibration_server_addr</string>
    <string name="calibration_server_addr_title">Calibration Server Address</string>
    <string name="calibration_server_addr_val">castle.cs.berkeley.edu</string>
    <string name="calibration_server_port_key">calibration_server_port</string>
    <string name="calibration_server_port_title">Calibration Server Port</string>
    <string name="calibration_server_port_val">50012</string>


    <string name="bosswave_router_addr_key">bosswave_router_addr</string>
    <string name="bosswave_router_addr_title">BOSSWAVE Router Address</string>
    <string name="bosswave_router_addr_val">castle.cs.berkeley.edu</string>
    <string name="bosswave_router_port_key">bosswave_router_port</string>
    <string name="bosswave_router_port_title">BOSSWAVE Router Port</string>
    <string name="bosswave_router_port_val">50037</string>
    <string name="bosswave_key_base64_key">bosswave_key_base64</string>
    <string name="bosswave_key_base64_title">BOSSWAVE key in Base64 (not a good idea)</string>
    <string name="bosswave_key_base64_val">MvQf3NbUJZbup7ToYhfVitMeGPX8vf0oQCZnp/TXpG5vu5ZfksWQzeqM5PETdum72J1a6UexHHzF+69v2HTpzNcCCJeiavGi9EIUAwjmoLBMSQgjFQUhS2FpZmVpIENoZW4gPGthaWZlaUBiZXJrZWxleS5lZHU+BgpNYXN0ZXIgS2V5AN0gC2JfUURxujnRcme3c9rxhW1CPnraNY563ZFRga8mpJVGGb3pqNYRc0cv4NONnZIRgJSfVhSdjR0Mb2tatwY=</string>
    <string name="camera_width_key">camera_width</string>
    <string name="camera_width_title">Camera Width (pixel)</string>
    <string name="camera_width_val">0</string>
    <string name="camera_height_key">camera_height</string>
    <string name="camera_height_title">Camera Height (pixel)</string>
    <string name="camera_height_val">0</string>
    <string name="camera_fx_key">camera_fx</string>
    <string name="camera_fx_title">Camera fx (pixel)</string>
    <string name="camera_fx_val">0.0</string>
    <string name="camera_fy_key">camera_fy</string>
    <string name="camera_fy_title">Camera fy (pixel)</string>
    <string name="camera_fy_val">0.0</string>
    <string name="camera_cx_key">camera_cx</string>
    <string name="camera_cx_title">Camera cx (pixel)</string>
    <string name="camera_cx_val">0.0</string>
    <string name="camera_cy_key">camera_cy</string>
    <string name="camera_cy_title">Camera cy (pixel)</string>
    <string name="camera_cy_val">0.0</string>
</resources>
