<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/query_rate_val"
        android:key="@string/query_rate_key"
        android:numeric="decimal"
        android:title="@string/query_rate_title"/>
    <EditTextPreference
        android:defaultValue="@string/grpc_server_addr_val"
        android:key="@string/grpc_server_addr_key"
        android:title="@string/grpc_server_addr_title" />
    <EditTextPreference
        android:defaultValue="@string/grpc_server_port_val"
        android:key="@string/grpc_server_port_key"
        android:numeric="integer"
        android:title="@string/grpc_server_port_title" />
    <EditTextPreference
        android:defaultValue="@string/calibration_server_addr_val"
        android:key="@string/calibration_server_addr_key"
        android:title="@string/calibration_server_addr_title" />
    <EditTextPreference
        android:defaultValue="@string/calibration_server_port_val"
        android:key="@string/calibration_server_port_key"
        android:numeric="integer"
        android:title="@string/calibration_server_port_title" />
    <EditTextPreference
        android:defaultValue="@string/bosswave_router_addr_val"
        android:key="@string/bosswave_router_addr_key"
        android:title="@string/bosswave_router_addr_title"/>
    <EditTextPreference
        android:defaultValue="@string/bosswave_router_port_val"
        android:key="@string/bosswave_router_port_key"
        android:numeric="integer"
        android:title="@string/bosswave_router_port_title"/>
    <EditTextPreference
        android:defaultValue="@string/bosswave_key_base64_val"
        android:key="@string/bosswave_key_base64_key"
        android:title="@string/bosswave_key_base64_title"/>
    <EditTextPreference
        android:defaultValue="@string/camera_fx_val"
        android:key="@string/camera_fx_key"
        android:numeric="decimal"
        android:title="@string/camera_fx_title"/>
    <EditTextPreference
        android:defaultValue="@string/camera_fy_val"
        android:key="@string/camera_fy_key"
        android:numeric="decimal"
        android:title="@string/camera_fy_title"/>
    <EditTextPreference
        android:defaultValue="@string/camera_cx_val"
        android:key="@string/camera_cx_key"
        android:numeric="decimal"
        android:title="@string/camera_cx_title"/>
    <EditTextPreference
        android:defaultValue="@string/camera_cy_val"
        android:key="@string/camera_cy_key"
        android:numeric="decimal"
        android:title="@string/camera_cy_title"/>
</PreferenceScreen>